登録できる種別を制限した

--- a/config/locales/app.yml
+++ b/config/locales/app.yml
@@ -6,3 +6,9 @@ ja:
       memo:
         kind: 種別
         content: 内容
+        created_at: 作成日
+  enumerize:
+    memo:
+      kind:
+        keep: よかったこと
+        problem: きになること
